[add]issue#1_入力したデータをDBに保存し、初期画面に表示させる

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -13,13 +13,13 @@
         <th>ステータス</th>
         <th>返却期限</th>
     </tr>
-<!--    <tr th:each="book : ${books}">-->
-<!--        <td th:text="${book.title}"></td>-->
-<!--        <td th:text="${book.author}"></td>-->
-<!--        <td th:text="${book.genre}"></td>-->
+    <tr th:each="book : ${books}">
+        <td th:text="${book.title}"></td>
+        <td th:text="${book.author}"></td>
+        <td th:text="${book.genre}"></td>
 <!--        <td th:text="${book.status}"></td>-->
 <!--        <td th:text="${book.returnDate}"></td>-->
-<!--    </tr>-->
+    </tr>
 </table>
 <h2>本を追加</h2>
 <form action="/addBook" method="post">
