--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -88,6 +88,7 @@
 <button type="button" class="btn btn-outline-danger" id="delete-btn" style="display: none;" onclick="deleteSelectedBooks()">削除</button>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
+<script src="validation.js"></script>
 <script src="main.js"></script>
 </body>
 </html>
